Sat Apr 21 04:13:12 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Explicitly set AM_CXXFLAGS to an empty value to start
	  with to avoid issues if it's set in the environment.  Cache the
	  results of the test to see if the C++ compiler actually works, and
	  in the XAPIAN_TEST_LINKER_FLAG macro.
	* configure.ac, include/xapian/visibility.h: Add --disable-visibility
	  option to configure to completely disable use of -fvisibility.
	* INSTALL: Document all --enable-backend-* options explicitly.
	  Document how to disable use of -fvisibility and
	  -Bsymbolic-functions should you want/need to.  Improve wording in
	  a few places.

Fri Apr 20 19:20:23 BST 2007  Olly Betts <olly@survex.com>

	* HACKING,configure.ac: Revert to requiring autoconf 2.59 so that the
	  .spec file for building RPMs can run `autoreconf' to work around a
	  libtool bug.

Fri Apr 20 18:12:51 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Document return type of ExpandDecider::Apply()
	  and MatchDecider::Apply() in C# is now bool instead of int.

Fri Apr 20 18:01:18 BST 2007  Olly Betts <olly@survex.com>

	* xapian.spec.in: Package xapian-check and its man page.

Fri Apr 20 14:38:00 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Note changed return type of
	  ExpandDecider::operator() and MatchDecider::operator().

Fri Apr 20 14:28:39 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: MatchDecider::operator() now returns
	  `bool' not `int'.  Remove declaraction of ExpandDecider.
	* include/xapian/expanddecider.h: Move declaration of ExpandDecider
	  to here.  ExpandDecider::operator() now returns `bool' not `int'.
	  ExpandDeciderAnd now names parameters `first' and `second' and
	  documents the order in which they are applied (useful if you have
	  an expensive and a cheap test).  ExpandDeciderAnd can now take
	  parameters by reference instead of pointer.
	* api/Makefile.mk,include/xapian/enquire.h,api/omenquire.cc,