@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003,2004,2005,2006 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -34,12 +34,7 @@
 
 #include <sys/types.h>
 
-#ifdef __WIN32__
-# include "safewindows.h"
-# define getpid() GetCurrentProcessId()
-#else
-# include <unistd.h>
-#endif
+#include "safeunistd.h"
 
 using std::string;
 
